# meshification

./: .gitignore  CMakeLists.txt
acquisition/: AcquisitionUI.cpp  AcquisitionUI.hpp  AcquisitionUI.ui  CMakeLists.txt  Consumer.cpp  Consumer.hpp  DepthMeshifier.cpp  DepthMeshifier.hpp  MeshBuilder.cpp  MeshBuilder.hpp  QtAcquisition.cpp  QtAcquisition.hpp  QtModelDescriptor.h  Source.hpp  SourceFreenect.cpp  SourceFreenect.hpp  SourceKinect.cpp  SourceKinect.hpp  SourceKinectOpenNI.cpp  SourceKinectOpenNI.hpp  SurfaceReconstruction.cpp  SurfaceReconstruction.hpp  Triangulator.cpp  Triangulator.hpp  VideoEncoder.cpp  VideoEncoder.hpp  Viewer.cpp  Viewer.hpp  acquisition-cli.cpp  fragment_shader.frag  main.cpp  vertex_shader.vert
calibration/: CMakeLists.txt  Kinect.cpp  Kinect.hpp  calibration.cpp  freenect_calibrate.cpp  grab_ir.cpp  stereo_calibration.cpp
common/: AsyncWorker.hpp
receiver/: CMakeLists.txt  Data3d.hpp  Model.cpp  Model.hpp  Receiver.cpp  Receiver.hpp  VideoDecoder.cpp  VideoDecoder.hpp  xvr_point_cloud.cpp  xvr_point_cloud.h  xvr_receiver.cpp  xvr_receiver.h
test/: CMakeLists.txt  Viewer.cpp  Viewer.hpp
virtual_camera/: Camera.cpp
